sdk/v0.4.23/columnmetadata.mdx
---
title: "ColumnMetadata"
icon: "square-c"
---
# `class` pixeltable.ColumnMetadata

<a href="https://github.com/pixeltable/pixeltable/blob/main/pixeltable/catalog/table_metadata.py#L5" target="_blank">View source on GitHub</a>


Metadata for a column of a Pixeltable table.


## `attr` computed_with

```
computed_with: str | None
```

Expression used to compute this column; `None` if this is not a computed column.


## `attr` defined_in

```
defined_in: str | None
```

Name of the table where this column was originally defined.

If the current table is a view, then `defined_in` may differ from the current table name.


## `attr` is_primary_key

```
is_primary_key: bool
```

`True` if this column is part of the table's primary key.


## `attr` is_stored

```
is_stored: bool
```

`True` if this is a stored column; `False` if it is dynamically computed.


## `attr` media_validation

```
media_validation: Literal['on_read', 'on_write'] | None
```

The media validation policy for this column.


## `attr` name

```
name: str
```

The name of the column.


## `attr` type_

```
type_: str
```

The type specifier of the column.


## `attr` version_added

```
version_added: int
```

The table version when this column was added.


